[package]
name = "baro"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.3.1", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-time = "0.4.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
fixed = "1.29.0"
static_cell = "2.1.0"
rand = { version = "0.9.0", default-features = false }
embedded-storage = "0.3.1"
usbd-hid = "0.8.1"
serde = { version = "1.0.136", default-features = false }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
num-integer = { version = "0.1.46", default-features = false }
microfft = "0.6.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
bmp390 = "0.4.1"


[profile.release]
debug = 2
